// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`global 1`] = `
[
  {
    "locale": "ja",
    "resource": {
      "hello": [Function],
    },
  },
]
`;

exports[`global 2`] = `
[
  {
    "locale": "",
    "resource": {
      "en": {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`import 1`] = `
[
  {
    "locale": "",
    "resource": {
      "en": {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`json5 1`] = `
[
  {
    "locale": "",
    "resource": {
      "en": {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`locale attr 1`] = `
[
  {
    "locale": "ja",
    "resource": {
      "hello": [Function],
    },
  },
]
`;

exports[`locale attr and basic 1`] = `
[
  {
    "locale": "",
    "resource": {
      "en": {
        "hello": [Function],
      },
    },
  },
  {
    "locale": "ja",
    "resource": {
      "hello": [Function],
    },
  },
]
`;

exports[`locale attr and import 1`] = `
[
  {
    "locale": "en",
    "resource": {
      "hello": [Function],
    },
  },
]
`;

exports[`multiple 1`] = `
[
  {
    "locale": "",
    "resource": {
      "en": {
        "hello": [Function],
      },
    },
  },
  {
    "locale": "",
    "resource": {
      "ja": {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`special characters 1`] = `
[
  {
    "locale": "",
    "resource": {
      "en": {
        "hello": [Function],
      },
    },
  },
]
`;

exports[`yaml 1`] = `
[
  {
    "locale": "en",
    "resource": {
      "hello": [Function],
    },
  },
  {
    "locale": "ja",
    "resource": {
      "hello": [Function],
    },
  },
]
`;
